Fix up alignment of new team member textbook.

--- a/views/sass/style.scss
+++ b/views/sass/style.scss
@@ -317,6 +317,7 @@ textarea:focus, input:focus{
       border-right: none; /* Cancel out border on last column */
       
       #new-team-member-form {
+        margin-left: 5px;
         .new-object-fieldset {
           width: 127px;
           
